--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -203,7 +203,7 @@ jobs:
               TargetHost=$(echo $Inputs | jq -r '.TargetHost')
               TargetEnvironment=$(echo $Inputs | jq -r '.TargetEnvironment')
               Period=$(echo $Inputs | jq -r '.Period')
-              IsRetryJob=$(echo $Inputs | jq -r '.IsRetryJob' // "no"')
+              IsRetryJob=$(echo $Inputs | jq -r '.IsRetryJob // "no"')
               # The following 3 parameters are mandatory; abort if they are missing from JSON inputs
               [[ -z $TargetHost ]] && "Target Host is not specified in JSON inputs"  && exit 2
               [[ -z $TargetEnvironment ]] && "Target Environment is not specified in JSON inputs" && exit 3
