--- a/.github/workflows/oracle-db-delete-dbids-not-in-use.yml
+++ b/.github/workflows/oracle-db-delete-dbids-not-in-use.yml
@@ -151,18 +151,25 @@ jobs:
       - name: Get Slack Token
         id: get-slack-token
         run: |
-                ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-                OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
-                      jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
-                      jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' | jq -r '.value' )
-                SECRET_ARN="arn:aws:secretsmanager:eu-west-2:${OEM_ACCOUNT_ID}:secret:/oracle/database/EMREP/shared-passwords"
-                SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --output json)
-                SLACK_TOKEN=$(echo ${SECRET_VALUE} | jq -r | jq -r 'to_entries[] | select(.key=="slack_token").value')
-                echo "slack_token=${SLACK_TOKEN}" >> $GITHUB_OUTPUT
+              # The OEM Account ID which is associated with this Delius account is held in the SSM Parameter Store.
+              OEM_ACCOUNT_ID=$(aws ssm get-parameter --name account_ids --region eu-west-2 --with-decryption  --output json | \
+                    jq '.Parameter.Value' | tr -d '\' | sed 's/^\"//' | sed 's/\"$//' | \
+                    jq -r 'to_entries | map(select(.key | contains("hmpps-oem-"))) | first' | jq -r '.value' )
+              # We can then access the Slack Token from the AWS Secrets for that OEM Account
+              SECRET_ARN="arn:aws:secretsmanager:eu-west-2:${OEM_ACCOUNT_ID}:secret:/oracle/database/EMREP/shared-passwords"
+              SECRET_VALUE=$(aws secretsmanager get-secret-value --secret-id "${SECRET_ARN}" --query SecretString --output json)
+              SLACK_TOKEN=$(echo ${SECRET_VALUE} | jq -r | jq -r 'to_entries[] | select(.key=="slack_token").value')
+              echo "slack_token=${SLACK_TOKEN}" >> $GITHUB_OUTPUT
 
       - name: Start Ansible Delete DBIDs Not In Use
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          # We run Ansible play which deletes any backups associated with Oracle DBIDs which are no longer active.
+          # These typically result from a refresh of an environment where the previous database is simply 
+          # replaced with a new copy from live.  DBIDs targeted for deletion are those which have no recent
+          # backup pieces in the S3 backup bucket for the current environment.  We run the logic from the
+          # primary database host in the environment.  Any such databases are also de-registered from the
+          # RMAN catalog if still present.
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
           $delete_dbids_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget $VerboseOutput
         
