--- a/playbooks/oracle_release_update/update_oem_after_deinstall/tasks/delete_agent_targets.yml
+++ b/playbooks/oracle_release_update/update_oem_after_deinstall/tasks/delete_agent_targets.yml
@@ -1,44 +1,33 @@
 ---
-- name: Get sysman password from ssm parameter store
-  shell: . /etc/environment && aws ssm get-parameters --region ${REGION} --with-decryption --name /${HMPPS_ENVIRONMENT}/${APPLICATION}/oem-database/db/oradb_sysman_password | jq -r '.Parameters[].Value'
-  register: sysman_output
-  changed_when: false
-  no_log: true
-
-- name: Set fact for sysman password to be used elsewhere
+- name: Set Agent Host
   set_fact:
-    sysman_password: "{{ sysman_output.stdout | default('Welcome1') }}"
-
-- name: Get Name of Agent Host
-  include: ../../update_oem/tasks/get_agent_target.yml
+    agent_host: "{{ target_host + '.' + dns_zone_internal }}"
 
 - name: Find Out if Deinstalled Home Exists as a Target
   shell: |
-    . ~/.bash_profile
-    {{ emcli }} login -username=sysman -password=${SYSMAN_PASSWORD} -force 1>&2
-    {{ emcli }} sync 1>&2
+    . {{ stage }}/emcli_login.sh
     ALL_HOME_TARGETS=$({{ emcli }} list -resource="Targets" -search="HOST_NAME='{{ agent_host }}'" -search="TARGET_TYPE='oracle_home'" -column="TARGET_NAME" -script -noheader)
     for TARGET in ${ALL_HOME_TARGETS}; do {{ emcli }} list -resource="TargetProperties" -search="TARGET_NAME='$TARGET'" -search="PROPERTY_NAME='INSTALL_LOCATION'" -column="PROPERTY_VALUE" -script | grep -q "{{ oracle_home }}" && echo $TARGET && break; done
   register: existing_oracle_home
   failed_when: existing_oracle_home.rc > 1
   changed_when: false
-  environment:
-    SYSMAN_PASSWORD: "{{ sysman_password }}"
 
-# This block will run if the Deinstalled Oracle Home Target still exists
-- name: Delete Deinstalled  Oracle Home Target
-  block:
-    - name: Delete Target from Repository
-      shell: |
-        . ~/.bash_profile
-          {{ emcli }} login -username=sysman -password={{ sysman_password }} -force
-          {{ emcli }} sync
-          {{ emcli }} delete_target -name="{{ existing_oracle_home.stdout }}" -type="oracle_home"
+- debug: var=existing_oracle_home.stdout_lines[1]
 
-    # Pause Until OEM has Finished Deleting the Target
-    # (Otherwise it will fail when we try to add the new target)
-    - name: Wait for Existing Target Deletion
-      script: ../../update_oem/files/wait_for_target_deletion.sh {{ existing_oracle_home.stdout }}
-      changed_when: false
+# # This block will run if the Deinstalled Oracle Home Target still exists
+# - name: Delete Deinstalled  Oracle Home Target
+#   block:
+#     - name: Delete Target from Repository
+#       shell: |
+#         . ~/.bash_profile
+#           {{ emcli }} login -username=sysman -password={{ sysman_password }} -force
+#           {{ emcli }} sync
+#           {{ emcli }} delete_target -name="{{ existing_oracle_home.stdout }}" -type="oracle_home"
 
-  when: existing_oracle_home.rc == 0
+#     # Pause Until OEM has Finished Deleting the Target
+#     # (Otherwise it will fail when we try to add the new target)
+#     - name: Wait for Existing Target Deletion
+#       script: ../../update_oem/files/wait_for_target_deletion.sh {{ existing_oracle_home.stdout }}
+#       changed_when: false
+
+#   when: existing_oracle_home.rc == 0
