Get sysman password and emcli login copy

--- a/playbooks/oracle_release_update/update_oem_after_deinstall/tasks/main.yml
+++ b/playbooks/oracle_release_update/update_oem_after_deinstall/tasks/main.yml
@@ -1,9 +1,20 @@
 ---
+- name: Get SYSMAN Password
+  include_tasks: "{{ playbook_dir }}/../../common/tasks/get_facts.yml"
+
+- name: Copy EMCLI Login scripts
+  template:
+    src: "{{ playbook_dir }}/../../common/templates/emcli_login.sh.j2"
+    dest: "{{ stage }}/emcli_login.sh"
+    mode: "0700"
+
 - name: Delete Targets
-  include: delete_agent_targets.yml
+  include_tasks: delete_agent_targets.yml
   vars:
-    target_host: "{{ item[0] }}"
-    oracle_home: "{{ item[1] }}"
+    target_host: "{{ target[0] }}"
+    oracle_home: "{{ target[1] }}"
   with_nested:
     - "{{ deletion_targets | default( target_hosts.split(',') ) }}"
     - ["{{ oracle_grid_oracle_home }}", "{{ oracle_database_oracle_home }}"]
+  loop_control:
+    loop_var: target
