--- a/.github/workflows/oracle-db-deinstall.yml
+++ b/.github/workflows/oracle-db-deinstall.yml
@@ -149,5 +149,5 @@ jobs:
             ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_release_update/roles
             $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
             -e target_hosts="${{ steps.preparetargetname.outputs.TargetHost }}" \
-            -e oracle_grid_oracle_home="{{ github.event.inputs.GridHome }}" \
-            -e oracle_database_oracle_home="{{ github.event.inputs.DatabaseHome }}" ${{ github.event.inputs.VerboseOutput }}
+            -e oracle_grid_oracle_home="${{ github.event.inputs.GridHome }}" \
+            -e oracle_database_oracle_home="${{ github.event.inputs.DatabaseHome }}" ${{ github.event.inputs.VerboseOutput }}
