--- a/playbooks/oracle_release_update/update_oem_after_deinstall/tasks/delete_agent_targets.yml
+++ b/playbooks/oracle_release_update/update_oem_after_deinstall/tasks/delete_agent_targets.yml
@@ -12,17 +12,21 @@
   failed_when: existing_oracle_home.rc > 1
   changed_when: false
 
-- debug: var=existing_oracle_home.stdout_lines[1]
+- name: Seach Output For Oracle Home Name
+  set_fact:
+    oracle_home_name: "{{ item }}"
+  loop: "{{ existing_oracle_home.stdout_lines }}"
+  when: item is search(agent_host)
+
+- debug: var=oracle_home_name
 
 # # This block will run if the Deinstalled Oracle Home Target still exists
 # - name: Delete Deinstalled  Oracle Home Target
 #   block:
 #     - name: Delete Target from Repository
 #       shell: |
-#         . ~/.bash_profile
-#           {{ emcli }} login -username=sysman -password={{ sysman_password }} -force
-#           {{ emcli }} sync
-#           {{ emcli }} delete_target -name="{{ existing_oracle_home.stdout }}" -type="oracle_home"
+#         . {{ stage }}/emcli_login.sh
+#         {{ emcli }} delete_target -name="{{ oracle_home_name }}" -type="oracle_home"
 
 #     # Pause Until OEM has Finished Deleting the Target
 #     # (Otherwise it will fail when we try to add the new target)
