--- a/playbooks/oracle_release_update/update_oem_after_deinstall/tasks/delete_agent_targets.yml
+++ b/playbooks/oracle_release_update/update_oem_after_deinstall/tasks/delete_agent_targets.yml
@@ -12,26 +12,27 @@
   failed_when: existing_oracle_home.rc > 1
   changed_when: false
 
-- name: Seach Output For Oracle Home Name
+- name: Search Output For Oracle Home Name
   set_fact:
     oracle_home_name: "{{ item }}"
   loop: "{{ existing_oracle_home.stdout_lines }}"
   when: item is search(agent_host)
 
-- debug: var=oracle_home_name
+# This block will run if the Deinstalled Oracle Home Target still exists
+- name: Delete Target from Repository
+  shell: |
+    . {{ stage }}/emcli_login.sh
+    {{ emcli }} delete_target -name="{{ oracle_home_name }}" -type="oracle_home"
+  when: existing_oracle_home.rc == 0 and oracle_home_name is defined
 
-# # This block will run if the Deinstalled Oracle Home Target still exists
-# - name: Delete Deinstalled  Oracle Home Target
-#   block:
-#     - name: Delete Target from Repository
-#       shell: |
-#         . {{ stage }}/emcli_login.sh
-#         {{ emcli }} delete_target -name="{{ oracle_home_name }}" -type="oracle_home"
-
-#     # Pause Until OEM has Finished Deleting the Target
-#     # (Otherwise it will fail when we try to add the new target)
-#     - name: Wait for Existing Target Deletion
-#       script: ../../update_oem/files/wait_for_target_deletion.sh {{ existing_oracle_home.stdout }}
-#       changed_when: false
-
-#   when: existing_oracle_home.rc == 0
+# Pause Until OEM has Finished Deleting the Target
+# (Otherwise it will fail when we try to add the new target)
+- name: Get Target From Repository
+  shell: |
+    . {{ stage }}/emcli_login.sh
+    {{ emcli }} get_targets -targets="{{ oracle_home_name }}:oracle_home" -script -noheader | awk '{print $NF}'
+  register: delete_target_monitor
+  until: delete_target_monitor.stdout_lines is not search(oracle_home_name)
+  delay: 60
+  retries: 10
+  when: oracle_home_name is defined
