--- a/.github/workflows/oracle-db-deinstall.yml
+++ b/.github/workflows/oracle-db-deinstall.yml
@@ -90,10 +90,9 @@ jobs:
         shell: bash
         run: |
           environment_name="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')"
-          IFS=","
-          for target in ${{ github.event.inputs.TargetHost }}
+          IFS="," read -ra targets <<< "${{ github.event.inputs.TargetHost }}"
+          for target in "${targets[@]}"
           do
-            IFS=""
             TargetHost+=${environment_name}_${target},
           done
           echo "TargetHost=${TargetHost%?}" >> $GITHUB_OUTPUT
